fixed mobile button container on landscape init and preventDefault() to remove ForceTouch on iOS Devices

--- a/style.css
+++ b/style.css
@@ -290,7 +290,5 @@ canvas {
 }
 
 @media only screen and (orientation: landscape) and (max-width: 1368px) {
-    .mobile-button-container {
-        display: flex;
-    }
+
 }
